UPDATED: structure for theme and templates

--- a/src/main/resources/templates/fragments/casLogoutView.html
+++ b/src/main/resources/templates/fragments/casLogoutView.html
@@ -21,7 +21,7 @@
                     <h2 th:utext="#{screen.logout.header}">Logout successful</h2>
                     <p th:utext="#{screen.logout.success}">You have successfully logged out of the Central Authentication Service.</p>
                     <p th:utext="#{screen.logout.security}">For security reasons, exit your web browser.</p>
-                    <p class="card-text back-to-main">Click <a href="../../..">here</a> to go to ioChem-BD main page</p>
+                    <p class="card-text back-to-main">Click <a href="../..">here</a> to go to ioChem-BD main page</p>
                 </div>
             </div>
           <div class="card card-empty mx-auto" style="min-width: 300px; max-width:350px; margin-top:2em; background-color: #f5f7f9; border: none;">
