FINISHED: restored iochembd cas  orginal view with db auth with echempad. orcid auth in progress

--- a/src/main/resources/templates/login/casLoginView.html
+++ b/src/main/resources/templates/login/casLoginView.html
@@ -15,7 +15,7 @@
     <div layout:fragment="content" class="row">
         <div class="col-md">
             <h1 class="sr-only" style="color:#FFF">ioChem-BD login page</h1>
-            <div th:replace="/templates/fragments/loginform :: loginform"><a href="/templates/fragments/loginform.html">Login Form goes
+            <div th:replace="../fragments/loginform.html :: loginform"><a href="../fragments/loginform.html">Login Form goes
                 here</a></div>
         </div>
     </div>
