UPDATED: orcid authentication working in frontend, not functional though

--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -143,10 +143,12 @@
                             });
                         });
                     </script>
-                    <!--
-                    <div th:replace="fragments/loginsidebar :: loginsidebar" />
-                    -->
+
+                    <div th:replace="fragments/loginProviders.html :: loginProviders" />
+
                 </div>
+
+
                 <div class="card-footer">
                     <a href="/browse" class="btn btn-secondary btn-block" role="button">Back to Home</a>
                 </div>                
