--- a/src/main/resources/templates/login/casGenericSuccessView.html
+++ b/src/main/resources/templates/login/casGenericSuccessView.html
@@ -14,7 +14,7 @@
     <div layout:fragment="content" class="row">
        <div class="col-sm-12 col-sm-12 d-flex flex-column justify-content-center align-items-center text-center">
          <div style="padding-bottom:2em;">
-            <img src="/cas/images/logo_iochembd.png" style="height: 70px;" alt="ioChem-BD Browse logo">
+            <img src="/cas/images/logo_iochembd.png" style="height: 70px;" alt="eChempad logo">
          </div>
          <div class="card mx-auto" style="width: 350px;">
             <div class="card-body">
@@ -23,8 +23,9 @@
                     href="logout">log out</a> and exit your web browser.</p>
             </div>
             <div class="card-footer">
-                <a href="/create" class="btn btn-secondary btn-block" role="button">Create module</a>
-                <a href="/browse/mydspace" class="btn btn-secondary btn-block" role="button">Browse module</a>
+                <!-- TODO parametrize url -->
+                <a href="https://echempad.iciq.es:8081" class="btn btn-secondary btn-block" role="button">eChempad app</a>
+                <a href="https://iciq-dmp.github.io/" class="btn btn-secondary btn-block" role="button">eChempad documentation</a>
             </div>
         </div>
     </div>
