--- a/src/main/resources/templates/logout/casLogoutView.html
+++ b/src/main/resources/templates/logout/casLogoutView.html
@@ -27,9 +27,9 @@
             </div>
           <div class="card card-empty mx-auto" style="min-width: 300px; max-width:350px; margin-top:2em; background-color: #f5f7f9; border: none;">
              <div class="d-flex justify-content-between footer-links-div">
-                 <a href="https://echempad.iciq.es:8081/zkau/web/zul/help.zul" target="_blank">Help</a>
+                 <a href="https://echempad.iciq.es:8081/help" target="_blank">Help</a>
                  <a href="mailto:dmp@iciq.es">Contact</a>
-                 <a href="https://echempad.iciq.es:8081/zkau/web/zul/about.zul" target="_blank">About eChempad</a>
+                 <a href="https://echempad.iciq.es:8081/about" target="_blank">About eChempad</a>
             </div>
           </div>
        </div>
